Publish Astral Repository 1.11.8 for fabric-26.2